# libreria_datafake

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_quick.py
datafake/: __init__.py  custom.py  elections.py  flights.py  football.py  health.py  movies.py  music.py  products.py  related.py  sales.py  social.py  users.py  utils.py  weather.py
notebooks/: tutorial.ipynb
tests/: test_generators.py
