[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "datafake"
version = "0.1.0"
description = "Generate realistic synthetic datasets for testing, education and development"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "faker>=18.0.0"
]

[project.urls]
Homepage = "https://github.com/reginacabralc/datafake"

[tool.setuptools.packages.find]
where = ["."]
include = ["datafake*"]